<resources>
    <string name="app_name">Call Your Mother</string>
    <string name="action_settings">More Info</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="channel_name">NotificationChannel</string>


    <!---Strings use for login activity xml -->
    <string name="banner">Call Your Mother</string>
    <string name="bannerDescription">Helping you stay in touch with those you love</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password</string>

    <!---Strings use for Registration activity xml -->
    <string name="bannerReg">Call Your Mother</string>
    <string name="bannerDescriptionReg">Helping you stay in touch with those you love</string>
    <string name="userName">Full Name</string>
    <string name="emailReg">Email Address</string>
    <string name="passwordReg">Password</string>
    <string name="registerButton">REGISTER</string>

    <!--    YVONNE-->
    <string name="title">EDIT FREQUENCY</string>
    <string name="radiobutton1">Daily</string>
    <string name="radiobutton2">Weekly</string>
    <string name="radiobutton3">Monthly</string>
    <string name="radiobutton4">Yearly</string>
    <string name="num"></string>
    <string name="contact">contact name...</string>
    <string name="number">times</string>
    <string name="call">Calls</string>
    <string name="text">Texts</string>
    <string name="save">SAVE</string>


    <!--    <string name="contactName">mynameiswhat</string>-->

    <string name="channel_description">Notification channel for this app</string>

<<<<<<< HEAD
=======
    <!---Strings use for login activity xml -->
    <string name="banner">Call Your Mother</string>
    <string name="bannerDescription">Helping you stay in touch with those you love</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password</string>

    <!---Strings use for Registration activity xml -->
    <string name="bannerReg">Call Your Mother</string>
    <string name="bannerDescriptionReg">Helping you stay in touch with those you love</string>
    <string name="userName">Full Name</string>
    <string name="emailReg">Email Address</string>
    <string name="passwordReg">Password</string>
    <string name="registerButton">REGISTER</string>
>>>>>>> 31b546b712d04a3fd200b8a579c0ef66635ad465

</resources>